--- a/layouts/partials/blox/resume-experience.html
+++ b/layouts/partials/blox/resume-experience.html
@@ -1,10 +1,12 @@
-{{ range . }}
-  <div class="pb-4">
-    <h3 class="text-lg font-semibold">
-      {{ .area }}, {{ .institution }}{{ with .date_start }} ({{ . | dateFormat "2006.01" }} – {{ $.date_end | dateFormat "2006.01" }}){{ end }}
-    </h3>
-    {{ with .summary }}
-      <div class="mt-1 text-sm">{{ . | markdownify }}</div>
-    {{ end }}
-  </div>
+{{ with .Params.education }}
+  {{ range . }}
+    <div class="pb-4">
+      <h3 class="text-lg font-semibold">
+        {{ .area }}, {{ .institution }}{{ with .date_start }} ({{ . | dateFormat "2006.01" }} – {{ $.date_end | dateFormat "2006.01" }}){{ end }}
+      </h3>
+      {{ with .summary }}
+        <div class="mt-1 text-sm">{{ . | markdownify }}</div>
+      {{ end }}
+    </div>
+  {{ end }}
 {{ end }}
