--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -53,5 +53,11 @@
   margin-right: auto;
 }
 
+/* ✅ 让右侧内容整体用 1 个 grid 包起来，让内容自然连贯排列 */
+#section-resume-biography-3 .max-w-prose {
+  display: grid;
+  grid-template-rows: auto auto;
+  gap: 2rem;
+}
 
 
